--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,12 +40,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation project(path: ':common')
     implementation project(path: ':presenter')
+    /*recyclerview*/
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     /*权限管理工具*/
     implementation 'pub.devrel:easypermissions:1.2.0'
     /*下拉刷新组件*/
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
-    /*进度条*/
-    implementation 'com.daimajia.numberprogressbar:library:1.4@aar'
-    implementation 'com.google.android.material:material:1.1.0'
 }
